[tool.poetry]
name = "pyrocatto-sg"
version = "0.2.0.post1"
description = "pyrocatto session generator"
authors = ["devops117 <devops117.main@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyrocatto_sg"}]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
click = "^8.1.3"
ruamel-yaml = "^0.17.32"
pyrocatto-pyrogram = "^2.0.107"
TgCrypto = {version = "^1.2.5", optional = true}

[tool.poetry.extras]
speedups = ["TgCrypto"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
